[package]
name = "leptess"
version = "0.13.0"
authors = ["QP Hou <dave2008713@gmail.com>", "Chris Couzens <ccouzens@gmail.com>"]
description = "Productive Rust binding for Tesseract and Leptonica."
homepage = "https://github.com/houqp/leptess"
repository = "https://github.com/houqp/leptess"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"
documentation = "https://houqp.github.io/leptess/leptess/index.html"

[dependencies]
tesseract-plumbing = { git = "https://github.com/vim-zz/tesseract-plumbing", branch = "fix_macos" }
thiserror = "1"

[dev-dependencies]
regex = "1.4.3"
